# open_social_data

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SESSION_LOG_TEMPLATE.md  TODO.md  abs_dataset_session_log.md  deny.toml  renovate.json  swarm-config.yaml
.github/ISSUE_TEMPLATE/: broken_source_link.yml  dataset_refresh.yml  new_dataset_proposal.yml
.github/workflows/: ci-learning-candidates.yml  ci.yml  docs.yml
benches/: parser_benchmarks.rs
conductor/: code-styleguides.md  execution-strategy.md  improvement-backlog.md  learning-log.md  product-guidelines.md  product.md  setup_state.json  tech-stack.md  tracks.md  workflow.md
conductor/templates/: registry-submission-workflow.md  registry-submission.schema.json  self-improvement-loop.md  track-improvement-template.md
datasets/abs/: .gitkeep
datasets/stats_nz/: .gitkeep
docs/: .gitkeep  advanced_access.md  contributor_workflow.md  external_future_followups.md  maintenance.md  provenance_archival_policy.md  release_process.md  sbom_provenance_guidance.md
docs-site/: astro.config.mjs  package.json
docs/advanced/: myhospitals_summary.html
examples/: README.md
logs/: abs_session_log.md  aihw_myhospitals_session_log.md
scripts/: build_myhospitals_dashboard.py  maintenance_check.py  validate_dataset_packs.py  validate_medium_term_roadmap.py  validate_source_metadata.py
src/: catalog.rs  catalog_sync.rs  error.rs  hardening.rs  lib.rs  main.rs  mock.rs  models.rs  pipeline.rs  quality.rs  registry.rs  sqlite_catalog.rs  traits.rs
templates/: .gitkeep  accessible_guide_template.md  data_dictionary_template.md  dataset_readme_template.md
tests/: cli_integration.rs  parser_regression.rs  parser_regression_tests.txt
(+178 files in other folders)
