[package]
name = "open_social_data_core"
version = "0.1.0"
edition = "2024"
description = "A Rust library for downloading, processing, and exporting public social datasets from national statistics agencies (ABS, Stats NZ) into modern formats like Parquet."
keywords = ["open-data", "statistics", "abs", "stats-nz", "parquet"]
categories = ["command-line-utilities", "database"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/open-social-data/open-social-data-core"
homepage = "https://github.com/open-social-data/open-social-data-core"
readme = "README.md"

[[bin]]
name = "open-social-data-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
indicatif = "0.18.3"
polars = { version = "0.54", features = ["parquet"] }
reqwest = { version = "0.13.4", features = ["json"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
